@@ -9,6 +9,7 @@ find /srv/bloonix/webgui/ -type f | xargs chmod 644
 chmod 755 /srv/bloonix/webgui/scripts/*
 chmod 750 /srv/bloonix/webgui/schema/init-database
 chmod 750 /srv/bloonix/webgui/schema/init-elasticsearch
-chmod o-rwx /srv/bloonix/webgui/bin /srv/bloonix/webgui/schema
+chmod 644 /srv/bloonix/webgui/schema/*.json /srv/bloonix/webgui/schema/*.sql
+chmod o-rwx /srv/bloonix/webgui/bin
 find /srv/bloonix/webgui/bin | grep -v README | xargs chmod 750
 
