@@ -13,200 +13,12 @@ if test -z "$HOST" ; then
     exit 1
 fi
 
-curl -XPUT "http://$HOST/_template/template_bloonix/" -d '{
-    "template": "bloonix-*",
-    "settings" : {
-        "index.number_of_shards" : 4,
-        "index.number_of_replicas" : 1
-    },
-    "mappings": {
-        "stats" : {
-            "dynamic_templates" : [
-                {
-                    "match_1": {
-                        "match": "*",
-                        "match_mapping_type" : "double",
-                        "mapping" : {
-                            "type": "string",
-                            "index" : "no"
-                        }
-                    }
-                },
-                {
-                    "match_2": {
-                        "match": "*",
-                        "match_mapping_type" : "float",
-                        "mapping" : {
-                            "type": "string",
-                            "index" : "no"
-                        }
-                    }
-                },
-                {
-                    "match_3": {
-                        "match": "*",
-                        "match_mapping_type" : "long",
-                        "mapping" : {
-                            "type": "string",
-                            "index" : "no"
-                        }
-                    }
-                },
-                {
-                    "match_4": {
-                        "match": "*",
-                        "match_mapping_type" : "int",
-                        "mapping" : {
-                            "type": "string",
-                            "index" : "no"
-                        }
-                    }
-                }
-            ],
-            "properties" : {
-                "time" : { "type" : "date", "index" : "not_analyzed" },
-                "host_id" : { "type" : "long", "index" : "not_analyzed" },
-                "service_id" : { "type" : "long", "index" : "not_analyzed" },
-                "plugin" : { "type" : "string", "index" : "not_analyzed" },
-                "subkey" : { "type" : "string", "index" : "not_analyzed" },
-                "data" : {
-                    "type" : "object",
-                    "index" : "no",
-                    "properties": {
-                        "time" : { "type" : "string", "index" : "not_analyzed" }
-                    }
-                }
-            }
-        },
-        "event" : {
-            "dynamic_templates" : [
-                {
-                    "match_1": {
-                        "match": "*",
-                        "match_mapping_type" : "double",
-                        "mapping" : {
-                            "type": "string",
-                            "index" : "no"
-                        }
-                    }
-                },
-                {
-                    "match_2": {
-                        "match": "*",
-                        "match_mapping_type" : "float",
-                        "mapping" : {
-                            "type": "string",
-                            "index" : "no"
-                        }
-                    }
-                },
-                {
-                    "match_3": {
-                        "match": "*",
-                        "match_mapping_type" : "long",
-                        "mapping" : {
-                            "type": "string",
-                            "index" : "no"
-                        }
-                    }
-                },
-                {
-                    "match_4": {
-                        "match": "*",
-                        "match_mapping_type" : "int",
-                        "mapping" : {
-                            "type": "string",
-                            "index" : "no"
-                        }
-                    }
-                }
-            ],
-            "properties" : {
-                "time" : { "type" : "date", "index" : "not_analyzed" },
-                "host_id" : { "type" : "long", "index" : "not_analyzed" },
-                "service_id" : { "type" : "long", "index" : "not_analyzed" },
-                "last_status" : { "type" : "string", "index" : "not_analyzed" },
-                "status" : { "type" : "string" },
-                "message" : { "type" : "string" },
-                "attempts" : { "type" : "string" },
-                "tags" : { "type" : "string" },
-                "duration" : { "type" : "long", "index" : "not_analyzed" },
-                "result" : {
-                    "type" : "object",
-                    "index" : "no",
-                    "properties": {
-                        "time" : { "type" : "string", "index" : "not_analyzed" },
-                        "duration" : { "type" : "string", "index" : "not_analyzed" }
-                    }
-                },
-                "debug" : {
-                    "type" : "object",
-                    "index" : "no",
-                    "properties": {
-                        "time" : { "type" : "string", "index" : "not_analyzed" },
-                        "duration" : { "type" : "string", "index" : "not_analyzed" }
-                    }
-                }
-            }
-        },
-        "results" : {
-            "dynamic_templates" : [
-                {
-                    "match_1": {
-                        "match": "*",
-                        "match_mapping_type" : "double",
-                        "mapping" : {
-                            "type": "string",
-                            "index" : "no"
-                        }
-                    }
-                },
-                {
-                    "match_2": {
-                        "match": "*",
-                        "match_mapping_type" : "float",
-                        "mapping" : {
-                            "type": "string",
-                            "index" : "no"
-                        }
-                    }
-                },
-                {
-                    "match_3": {
-                        "match": "*",
-                        "match_mapping_type" : "long",
-                        "mapping" : {
-                            "type": "string",
-                            "index" : "no"
-                        }
-                    }
-                },
-                {
-                    "match_4": {
-                        "match": "*",
-                        "match_mapping_type" : "int",
-                        "mapping" : {
-                            "type": "string",
-                            "index" : "no"
-                        }
-                    }
-                }
-            ],
-            "properties" : {
-                "time" : { "type" : "date", "index" : "not_analyzed" },
-                "host_id" : { "type" : "long", "index" : "not_analyzed" },
-                "service_id" : { "type" : "long", "index" : "not_analyzed" },
-                "status" : { "type" : "string", "index" : "not_analyzed" },
-                "message" : { "type" : "string" },
-                "attempts" : { "type" : "string" },
-                "data" : {
-                    "type" : "object",
-                    "index" : "no",
-                    "properties": {
-                        "time" : { "type" : "string", "index" : "not_analyzed" }
-                    }
-                }
-            }
-        }
-    }
-}'
+TEMPLATE=$(cat /srv/bloonix/webgui/schema/es-template.json)
+
+if test "$1" = "get-template" ; then
+    echo "$TEMPLATE"
+    exit
+fi
+
+curl -XPUT "http://$HOST/_template/template_bloonix/" -d "$TEMPLATE"
+echo
